<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.LoginActivity">

    <!-- Login form -->

    <FrameLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_bk">

        <LinearLayout
            android:id="@+id/splash_page"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/splash" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_page"
            style="@style/LoginFormContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/login_logo" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/message_text_bg"
                        android:hint="@string/prompt_name"
                        android:inputType="text|textPersonName|textEmailAddress"
                        android:maxLines="1"
                        android:paddingLeft="15dp"
                        android:textColorHint="@color/login_hint_color"
                        android:textSize="15sp" />

                    <!--ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignBottom="@+id/username"
                        android:layout_alignLeft="@+id/username"
                        android:layout_alignTop="@+id/username"
                        android:paddingLeft="10dp"
                        android:src="@drawable/login_user" /-->
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/message_text_bg"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="15dp"
                        android:textColorHint="@color/login_hint_color"
                        android:textSize="15sp" />
                </RelativeLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/default_btn_bg"
                    android:text="@string/action_sign_in_register"
                    android:textColor="@android:color/white"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/sign_switch_login_server"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/quick_register"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/half_transparent_light"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</merge>